@@ -187,7 +187,7 @@ cdef class Implicit_ODE(ODE):
         
         self.time_integration_start = timer()
 
-        while (flag == ID_COMPLETE and tevent == tfinal) is False and (self.t-eps > tfinal) if backward else (self.t+eps < tfinal):
+        while (flag == ID_COMPLETE and tevent == tfinal) is False and (self.t - eps*max(abs(self.t), abs(tfinal)) > tfinal) if backward else (self.t + eps*max(abs(self.t), abs(tfinal)) < tfinal):
 
             #Time event function is specified
             if  TIME_EVENT == 1:
@@ -219,7 +219,7 @@ cdef class Implicit_ODE(ODE):
             #Event handling
             if flag == ID_EVENT or (flag == ID_COMPLETE and tevent != tfinal): #Event have been detected
                 
-                if self.store_event_points and output_list is not None and abs(output_list[opts["output_index"]-1]-self.t) > eps:
+                if self.store_event_points and output_list is not None and abs(output_list[opts["output_index"]-1]-self.t) > eps*max(abs(self.t), abs(tfinal)):
                     self.problem.handle_result(self, self.t, self.y.copy(), self.yd.copy())
                                 
                 #Get and store event information
